--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="kr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>도경 안녕</title>
-        <link rel="stylesheet" href="/style.css" />
-    </head>
-    <body>
-        <p>Hi</p>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>도경 안녕</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <p>Hi</p>
+</body>
+
 </html>
