--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<link rel="stylesheet" href="style.css" />
+<!doctype html>
+<html lang="kr">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>도경 안녕</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
