--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             const minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
 
-            document.getElementById('countdown').innerText = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+            document.getElementById('countdown').innerText = `${days}일 ${hours}시간 ${minutes}분 ${seconds}초`;
         }
 
         setInterval(updateCountdown, 1000);
