--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+    <p>한국 돌아갈때 까지</p>
     <div id="countdown"></div>
+    <p>남았어</p>
+    <p>🙆🏼‍♂️</p>
 
     <script>
         function updateCountdown() {
