--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>한국 돌아갈때 까지</p>
     <div id="countdown"></div>
     <p>남았어</p>
-    <p>🙆🏼‍♂️</p>
+    <div class="heart">❤️</div>
 
     <script>
         function updateCountdown() {
