--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <p>한국 돌아갈때 까지</p>
-    <div id="countdown"></div>
-    <p>남았어</p>
+    <div class="container">
+        <p>한국 돌아갈때 까지</p>
+        <div id="countdown"></div>
+        <p>남았어</p>
+    </div>
     <div class="heart">❤️</div>
 
     <script>
