--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <div class="container">
-        <p>한국 돌아갈때 까지</p>
+        <p>도경 안녕 👋</p>
+        <p>나 한국 돌아갈 때까지</p>
         <div id="countdown"></div>
         <p>남았어</p>
     </div>
-    <div class="heart">❤️</div>
+    <div class="heart">Made with ❤️ by 크리스</div>
 
     <script>
         function updateCountdown() {
