--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="countdown"></div>
         <p>남았어</p>
     </div>
-    <div class="heart">Made with ❤️ by 크리스</div>
+    <div class="heart">With ❤️ by 크리스</div>
 
     <script>
         function updateCountdown() {
