--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta property="og:title" content="도경 안녕" />
+    <meta property="og:image" content="og-image.png" />
+    <meta property="og:description" content="곧 봐" />
+
     <title>도경 안녕</title>
     <link rel="stylesheet" href="style.css" />
 </head>
