--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="도경 안녕" />
+    <meta property="og:url" content="https://도경안녕.com" />
     <meta property="og:image" content="https://raw.githubusercontent.com/hoffa/dokyung/main/og-image.png" />
     <meta property="og:description" content="곧 봐" />
 
