--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
             const now = new Date();
             const timeDifference = targetDate - now;
 
-            const weeks = Math.floor(timeDifference / (1000 * 60 * 60 * 24 * 7));
-            const days = Math.floor((timeDifference % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24));
+            const days = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
             const hours = Math.floor((timeDifference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
 
             let countdownText = '';
-            if (weeks > 0) countdownText += `${weeks}주 `;
             if (days > 0) countdownText += `${days}일 `;
             if (hours > 0) countdownText += `${hours}시간 `;
             if (minutes > 0) countdownText += `${minutes}분 `;
